--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="orange">#fca220</color>
     <color name="coklat">#c49b60</color>
     <color name="putih">#FFFFFF</color>
+    <color name="hitam">#000000</color>
 </resources>
