--- a/app/src/main/res/layout/activity_lingkaran.xml
+++ b/app/src/main/res/layout/activity_lingkaran.xml
@@ -90,6 +90,7 @@
         android:layout_marginLeft="20dp"
         android:text="Luas dan Keliling"
         android:textColor="@color/hitam"
+        android:textSize="20sp"
         android:id="@+id/nilai"/>
 
 </RelativeLayout>
