--- a/app/src/main/res/layout/activity_hitung_bmi.xml
+++ b/app/src/main/res/layout/activity_hitung_bmi.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,34 +8,87 @@
     android:orientation="vertical"
     tools:context=".HitungBMIActivity">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/elip1"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/elip2"/>
+    <TextView
+        android:id="@+id/judul_bmi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Menghitung BMI"
+        android:layout_marginTop="120dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/hitam"/>
+
+    <ImageView
+        android:id="@+id/tubuh_bmi"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
+        android:layout_below="@id/judul_bmi"
+        android:layout_centerInParent="true"
+        android:src="@drawable/tubuh" />
+
     <EditText
         android:id="@+id/txtBeratBadan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tubuh_bmi"
+        android:backgroundTint="@color/putih"
+        android:background="@drawable/button_shape"
         android:ems="10"
-        android:hint="Isikan berat badan (kg)"
-        android:inputType="number" />
+        android:layout_marginTop="20dp"
+        android:padding="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:hint="Berat badan (kg)"
+        android:inputType="number"
+        android:textColor="@color/hitam" />
 
     <EditText
         android:id="@+id/txtTinggiBadan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/txtBeratBadan"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/button_shape"
+        android:backgroundTint="@color/putih"
         android:ems="10"
-        android:hint="Isikan tinggi badan (m)"
-        android:inputType="number|numberDecimal" />
+        android:hint="Tinggi badan (cm)"
+        android:inputType="number|numberDecimal"
+        android:padding="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:paddingLeft="5dp" />
 
     <Button
         android:id="@+id/btnCekBMI"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/txtTinggiBadan"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/button_shape"
+        android:textColor="@color/putih"
+        android:textSize="20sp"
         android:text="CEK BMI" />
 
     <TextView
         android:id="@+id/txtStatusBadan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/btnCekBMI"
         android:text="Status Badan"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/hitam"
         android:textAlignment="center"
-        android:textSize="24sp" />
+        android:textSize="20sp" />
 
-</LinearLayout>
+</RelativeLayout>
