--- a/app/src/main/res/layout/activity_sensor.xml
+++ b/app/src/main/res/layout/activity_sensor.xml
@@ -6,7 +6,22 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/judul_sensor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Menguji Sensor"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        android:textColor="@color/hitam"/>
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/wifi"/>
+
+    <TextView
         android:id="@+id/proximitySensor"
+        android:layout_marginTop="20dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
