--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,14 +11,23 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_centerInParent="true"
-        android:src="@mipmap/icon"/>
+        android:src="@mipmap/icon" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo_id"
         android:layout_centerHorizontal="true"
-        android:text="Splash Screen"
-        android:textSize="30dp" />
+        android:text="Selamat Datang"
+        android:textSize="30sp" />
+
+    <ProgressBar
+        android:id="@+id/loading_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/logo_id"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:indeterminate="true" />
 
 </RelativeLayout>
