--- a/app/src/main/res/layout/content_sqlite.xml
+++ b/app/src/main/res/layout/content_sqlite.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".SQLiteActivity"
     tools:showIn="@layout/activity_sqlite">
@@ -12,6 +12,16 @@
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp"
+        android:padding="10dp"
+        android:clipToPadding="false"
+        android:background="@android:color/transparent"
+        android:scrollbars="none"
+        android:overScrollMode="never"
+        android:typeface="sans"
+        android:textSize="16sp"
+        android:textColor="@android:color/black" />
 
 </RelativeLayout>
