add login, catatan, mysql

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,9 @@
     <color name="coklat">#c49b60</color>
     <color name="putih">#FFFFFF</color>
     <color name="hitam">#000000</color>
+    <color name="aquamarine">#7fffd4</color>
+    <color name="aquamarine1">#3DE5A7</color>
+    <color name="aquamarine2">#0077A7</color>
+    <color name="aquamarine3">#6FEBBE</color>
+    <color name="ijo_gelap">#006141</color>
 </resources>
