--- a/app/src/main/res/layout/activity_catatan_external.xml
+++ b/app/src/main/res/layout/activity_catatan_external.xml
@@ -1,35 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:background="@drawable/bgcatatan"
     tools:context=".CatatanExternalActivity">
+    <ImageView
+        android:id="@+id/elip1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/elip1"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/elip2"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="150dp"
         android:text="Aplikasi Catatan"
+        android:textStyle="italic|bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="180dp"
         android:text="Penyimpanan internal"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+        android:paddingHorizontal="5dp"
+        android:layout_marginTop="250dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="top"
+            android:gravity="center"
             android:hint="Tulis catatan disini"
             android:inputType="textMultiLine"
             android:minLines="5" />
@@ -38,15 +53,21 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="400dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_simpan"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="1"
-            android:text="SIMPAN CATATAN" />
+            android:background="@drawable/button_kotak_hijau"
+            android:fontFamily="sans-serif"
+            android:text="SIMPAN CATATAN"
+            android:textColor="@color/putih"
+            android:textSize="10sp"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <View
             android:layout_width="16dp"
@@ -55,16 +76,22 @@
         <Button
             android:id="@+id/btn_baca"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="1"
-            android:text="LIHAT CATATAN" />
+            android:background="@drawable/button_kotak_hijau"
+            android:fontFamily="sans-serif"
+            android:text="LIHAT CATATAN"
+            android:textColor="@color/putih"
+            android:textSize="10sp"
+            tools:ignore="TouchTargetSizeCheck" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <TextView
         android:id="@+id/text_catatan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:paddingHorizontal="5dp"
+        android:layout_marginTop="450dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
-</LinearLayout>
+</RelativeLayout>
