--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/bg"
+    android:background="@drawable/bglogin"
     android:gravity="center"
     tools:context=".LoginActivity">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="75sp"
         android:src="@drawable/logo_dts"/>
 
     <LinearLayout
@@ -22,7 +23,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/putih"
+            android:textColor="@color/ijo_gelap"
             android:textSize="20dp"
             android:text="Username"/>
 
@@ -34,7 +35,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/putih"
+            android:textColor="@color/ijo_gelap"
             android:textSize="20dp"
             android:text="Password"/>
 
@@ -48,6 +49,8 @@
             android:layout_gravity="center"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_kotak_hijau"
+            android:textColor="@color/putih"
             android:text="LOGIN"/>
 
     </LinearLayout>
