--- a/app/src/main/res/layout/activity_kalkulator.xml
+++ b/app/src/main/res/layout/activity_kalkulator.xml
@@ -63,7 +63,7 @@
         android:layout_marginEnd="238dp"
         android:layout_marginRight="238dp"
         android:layout_marginBottom="367dp"
-        android:background="@drawable/button_shape"
+        android:background="@color/ijo_gelap"
         android:gravity="center"
         android:text=" + "
         android:textAlignment="center"
