--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,16 +16,63 @@
         tools:showIn="@layout/app_bar_main">
 
         <!-- CAROUSEL -->
-        <!-- TODO: BIkin motion layout trs isi transisition dan lain2 buat carousel -->
-        <Transisiton>
+        <!-- TODO:
+            1. BIkin motion layout buat carousel
+            2. bikin motion scene di xml baru lalu isi transition
+            3. layout mation scene di reference di layoutDesction di
+               motion layout-->
+        <androidx.constraintlayout.motion.widget.MotionLayout
+            android:id="@+id/motionLayout"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="10dp"
+            app:layoutDescription="@xml/carousel_motion_scene"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            app:showPaths="true">
 
-        </Transisiton>
+            <!-- GAMBAR -->
+            <ImageView
+                android:id="@+id/gambar1"
+                android:src="@drawable/gambar_1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
+            <ImageView
+                android:id="@+id/gambar2"
+                android:src="@drawable/gambar_2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            <ImageView
+                android:id="@+id/gambar3"
+                android:src="@drawable/gambar_3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <!-- MAIN CAROUSEL -->
+            <androidx.constraintlayout.helper.widget.Carousel
+                android:id="@+id/carousel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:carousel_forwardTransition="@+id/forward"
+                app:carousel_backwardTransition="@+id/backward"
+                app:carousel_nextState="@+id/next"
+                app:carousel_previousState="@+id/previous"
+                app:carousel_infinite="true"
+                app:carousel_firstView="@+id/gambar1"
+                app:constraint_referenced_ids="gambar1, gambar2, gambar3"/>
+<!--            <View-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:id="@+id/carouselButton1"-->
+<!--                android:background="@color/aquamarine"-->
+<!--                android:text="Button"/>-->
+        </androidx.constraintlayout.motion.widget.MotionLayout>
         <!-- CAROUSEL -->
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/carouselView"
+            android:layout_below="@+id/motionLayout"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
