--- a/app/src/main/res/xml/carousel_motion_scene.xml
+++ b/app/src/main/res/xml/carousel_motion_scene.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- FORWARD -->
-    <Transition
+    <Transition android:id="@id/forward"
         motion:constraintSetStart="@+id/start"
         motion:constraintSetEnd="@+id/next"
         motion:duration="5000">
@@ -15,7 +15,7 @@
     </Transition>
 
     <!-- BACKWARD -->
-    <Transition
+    <Transition android:id="@id/backward"
         motion:constraintSetStart="@+id/start"
         motion:constraintSetEnd="@+id/previous"
         motion:duration="5000">
@@ -25,13 +25,29 @@
             motion:dragDirection="dragRight"/>
     </Transition>
 
-
-<!--    <ConstraintSet android:id="@+id/start">-->
-<!--        <Constraint-->
-<!--            android:id="@+id/carouselMSButton"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="120dp"-->
-<!--            android:layout_marginStart="8dp"-->
-<!--            />-->
-<!--    </ConstraintSet>-->
+    <!-- CONTRAINST -->
+    <ConstraintSet android:id="@id/start">
+        <Constraint
+            android:id="@+id/carouselMSButton"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_marginStart="8dp"
+            />
+    </ConstraintSet>
+    <ConstraintSet android:id="@id/next">
+        <Constraint
+            android:id="@+id/carouselMSButton"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_marginStart="8dp"
+            />
+    </ConstraintSet>
+    <ConstraintSet android:id="@id/end">
+        <Constraint
+            android:id="@+id/carouselMSButton"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_marginStart="8dp"
+            />
+    </ConstraintSet>
 </MotionScene>
