--- a/app/src/main/res/layout/activity_pegawai_main.xml
+++ b/app/src/main/res/layout/activity_pegawai_main.xml
@@ -13,7 +13,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="210dp"
+    android:paddingHorizontal="10dp"
     android:orientation="vertical">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
