--- a/app/src/main/res/layout/activity_pegawai_tampil.xml
+++ b/app/src/main/res/layout/activity_pegawai_tampil.xml
@@ -12,7 +12,8 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="220dp"
+        android:layout_marginVertical="210dp"
+        android:paddingHorizontal="10dp"
         android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
