--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,32 +2,57 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/splashLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/splash"
+    android:background="@drawable/gradient_all"
     tools:context=".SplashActivity">
 
-    <ImageView
-        android:id="@+id/logo_id"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_centerInParent="true"
-        android:src="@mipmap/icon" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearTengah"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="50dp">
+        <ImageView
+            android:id="@+id/logo_id"
+            android:layout_width="290dp"
+            android:layout_height="140dp"
+            android:background="@drawable/logo_dts" />
+    </LinearLayout>
+
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/logo_id"
+        android:id="@+id/selamat_datang"
+        android:layout_below="@+id/linearTengah"
         android:layout_centerHorizontal="true"
         android:text="Selamat Datang"
         android:textSize="30sp" />
 
-    <ProgressBar
+    <!-- ProgressBar
         android:id="@+id/loading_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/logo_id"
+        android:layout_below="@id/linearTengah"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
-        android:indeterminate="true" />
+        android:indeterminate="true" /-->
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:layout_below="@id/selamat_datang"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:indeterminateTint="@color/biru"
+        android:indeterminate="true"/>
+
 
 </RelativeLayout>
