--- a/app/src/main/res/drawable/trending_background.xml
+++ b/app/src/main/res/drawable/trending_background.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+
+    <gradient
+        android:angle="360"
+        android:endColor="#00CDAC"
+        android:startColor="#02AABD"/>
+
+    <corners android:radius="10dp"/>
+
+
+</shape>
