--- a/app/src/main/res/layout/activity_gps.xml
+++ b/app/src/main/res/layout/activity_gps.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center"
+    tools:context=".GPS">
+
     <TextView
         android:id="@+id/location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lokasi GPS Sekarang"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:gravity="center"
+        android:padding="16dp"
+        android:text="Location"
+        android:textSize="20sp" />
+
     <Button
         android:id="@+id/getLocation"
-        android:text="Dapatkan Lokasi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="171dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button_shape"
+        android:text="Get Location"
+        android:textColor="@color/putih"/>
+
 </LinearLayout>
+
