--- a/app/src/main/res/layout/activity_nama.xml
+++ b/app/src/main/res/layout/activity_nama.xml
@@ -5,43 +5,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
+    android:padding="16dp"
+    android:background="#F5F5F5"
     tools:context=".NamaActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DATA PESERTA VSGA"
-        android:textSize="40dp"
-        android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="32sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="32dp"
+        android:textColor="#009688" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="50dp"
-        android:textSize="20dp"
-        android:text="Nama : "/>
+        android:text="Nama :"
+        android:textColor="#333333"
+        android:textSize="18sp" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Masukkan Nama Anda"
-        android:id="@+id/editNama"/>
+        android:id="@+id/editNama"
+        android:inputType="text"
+        android:backgroundTint="#009688" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="OK"
-        android:id="@+id/btnOk"/>
+        android:id="@+id/btnOk"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#009688" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Data Peserta"
         android:id="@+id/txtHasil"
-        android:paddingBottom="80dp"/>
+        android:textSize="18sp"
+        android:paddingTop="16dp"
+        android:textColor="#333333" />
 
 </LinearLayout>
+
