--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -105,7 +105,7 @@
         android:textSize="25dp"
         android:text="^" />
     <Button
-        android:id="@+id/sqrt"
+        android:id="@+id/root"
         android:layout_below="@id/bagi"
         android:layout_width="75dp"
         android:layout_height="75dp"
