mulai ngerjain storage

--- a/app/src/main/res/layout/activity_storage.xml
+++ b/app/src/main/res/layout/activity_storage.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,20 +11,34 @@
         android:id="@+id/input_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="150dp"
+
         android:ems="10"
         android:hint="Masukan Data"
         android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/save_internal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Simpan ke Internal" />
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+
+        android:layout_below="@id/input_data"
+        android:layout_alignLeft="@id/input_data"
+        android:layout_marginRight="210dp"
+
+        android:text="SAVE TO INTERNAL" />
 
     <Button
         android:id="@+id/save_external"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Simpan ke External" />
+        android:layout_width="300dp"
+        android:layout_height="200dp"
 
-</LinearLayout>
+        android:layout_below="@id/input_data"
+        android:layout_alignRight="@id/input_data"
+        android:layout_marginLeft="210dp"
+
+        android:text="SAVE TO EXTERNAL" />
+
+</RelativeLayout>
