--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,14 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
+    <color name="gruv_bg">#FBF1C7</color>
+
     <color name="biru">#337dff</color>
     <color name="orange">#fca220</color>
     <color name="coklat">#c49b60</color>
     <color name="putih">#FFFFFF</color>
     <color name="hitam">#000000</color>
+
     <color name="aquamarine">#7fffd4</color>
     <color name="aquamarine1">#3DE5A7</color>
     <color name="aquamarine2">#0077A7</color>
